# training-signal-processing

./: .dockerignore  .gitignore  .rayignore  AGENTS.md  ARCHITECTURE.md  Dockerfile.dataset_tokenization  Dockerfile.lid_metadata  Dockerfile.source-cleaning  Dockerfile.source_accounting  Dockerfile.superbpe_cpu  EXTENDING.md  ONBOARDING.md  README.md  TOKENIZER_DOCS.md  final_merged_dataset_accounting.md  pyproject.toml  run_near_dedup_autorestart.sh  source_accounting.md
analysis/: final_merged_dataset_accounting.md
analysis/source/: README.md  requirements.txt  source_distribution_analysis.py  stopwords.txt
analysis/source/self_test_outputs/_fixture/: fixture_accounting.md
analysis/tokenizer/: evaluate_superbpe_fertility.py  native_superbpe_1m_rows_max4w_expected.json  reproduce_native_superbpe_1m_rows_max4w.py
analysis/tokenizer/experiments/native_superbpe_1m_rows_max4w/: superbpe_tokenizer_evaluation.json  superbpe_tokenizer_evaluation.md
config/: dataset_tokenization.native_superbpe.sample.yaml  fineweb_2_lite.sample.yaml  fineweb_unified.sample.yaml  lid_metadata.sample.yaml  remote_ocr.sample.yaml  remote_tokenizer.sample.yaml  remote_youtube_asr.sample.yaml  source_accounting.sample.yaml  source_cleaning.sample.yaml  tokenizer_training.final_merged.sample.yaml  tokenizer_training.superbpe_balanced_50k.sample.yaml  unified_data.sample.yaml
docs/: EXTENDING.md  data-juicer-architecture.md  final-tokenized-dataset-r2.md  fineweb2-lite-quality-metadata.md  remote_ocr_design.md  superbpe-second-pass.md
example/: README.md  duckdb_r2_query.py  stream_r2_parquet.py
infra/: .gitignore  kill_runpod_5090.sh  start_runpod_5090.sh
infra/dstack/config/: fleet.dstack.yml  lid-metadata-canary-cpu2.dstack.yml  lid-metadata-cpu32.dstack.yml  lid-metadata-cpu64.dstack.yml  ocr-resume-4090x4.dstack.yml  pretrain.dstack.yml  superbpe-cpu128.dstack.yml  superbpe-cpu64-fleet.dstack.yml
infra/dstack/scripts/: run-lid-metadata-ray.sh  run-superbpe-tokenizer.sh  status-superbpe-tokenizer.sh
plans/: source-accounting
rust/superbpe_native/: Cargo.toml
rust/superbpe_native/src/: artifacts.rs  bytelevel.rs  main.rs  trainer.rs
scripts/: count-lid-metadata-output.sh  count-output.sh  export-fineweb2-lite-malay-filtered-snapshot-cron.sh  export-fineweb2-lite-malay-filtered-snapshot.py  read-source-cleaning-output.sh  refresh-fineweb2-lite-filtered-index-cron.sh  refresh-fineweb2-lite-filtered-index.py
src/data-storage/: DATABASE.md  Dockerfile  docker-compose.yml  storage-plan.md
src/data-storage/config/: postgresql.conf
src/data-storage/initdb/: 00_extensions.sql  01_core_schema.sql  02_source_tables.sql  03_unified_schema.sql  04_indexes.sql  05_views.sql
src/data-storage/scripts/: FINEWEB_EDU_TRANSLATION.md  ingest.py  ingest_fineweb_edu.py  ingest_sea_pile_malay.py  serve_qwen3_translate.sh  translate_fineweb_edu_malay.py
src/data-storage/scripts/migrations/: add_document_language_detection_table.sql  add_document_translation_thinking_table.sql  add_fine_web_edu_malay_translate.sql  add_fineweb2_lite_documents.sql  add_fineweb2_lite_filtered_document_index.sql  add_fineweb_edu.sql  add_near_dedup_table.sql  add_sea_pile_malay.sql
src/data-storage/scripts/post_load/: 04b_post_load_indexes.sql  05_fineweb2_lite_filtered_index_concurrent_indexes.sql
src/data-storage/scripts/queries/: fineweb2_lite_filtered_document_index.sql  (+1 more)
src/training_signal_processing/: main.py  models.py  recipe.py  storage.py
src/training_signal_processing/core/: __init__.py  checkpoint.py  config_loading.py  dataset.py  events.py  execution.py  exporter.py  models.py  observability.py  remote.py  storage.py  submission.py  utils.py
src/training_signal_processing/custom_ops/: README.md  __init__.py  tokenizer_ops.py  user_ops.py  youtube_asr_ops.py
src/training_signal_processing/ops/: __init__.py  base.py  books_ocr_cleanup.py  builtin.py  registry.py  source_uninformative_cleaning.py  testing.py  user_ops.py
src/training_signal_processing/pipelines/: __init__.py
src/training_signal_processing/runtime/: __init__.py  dataset.py  executor.py  exporter.py  observability.py  remote_job.py  resume.py  reverse_tunnel.py  submission.py
src/training_signal_processing/storage/: object_store.py
tests/: test_cli_entrypoints.py  test_core_events.py  test_dataset_tokenization_pipeline.py  test_fineweb2_lite_pipeline.py  test_fineweb_unified_pipeline.py  test_lid_metadata_pipeline.py  test_ocr_resume_recovery.py  test_ocr_upload_refactor.py  test_remote_launcher.py  test_reverse_tunnel.py  test_runtime_generic.py  test_source_accounting_pipeline.py  test_source_cleaning_pipeline.py  test_superbpe_parity.py  test_tokenizer_pipeline.py  test_tokenizer_training_pipeline.py  test_unified_data_pipeline.py  test_youtube_asr_pipeline.py
tokenizers/local_bpeasy_balanced_1to1/: README.md  tokenizer.json
tokenizers/local_bpeasy_previous_40g_cache/: README.md  tokenizer.json
tokenizers/native_superbpe_1m_rows_max4w/: README.md  tokenizer.json
(+100 files in other folders)
